# Air-Guitar

./: .gitignore  README.md  main.py  pyproject.toml
OneDrive/Desktop/DOJO/VS CODE/: practice.java  practice.js  practice.psup.py  practice.py  practice1.py  practice2.py  practicebelt.java
docs/: api.md  architecture.md  docs-index.md  features.md  production.md  quickstart.md  testing.md
src/air_guitar/: __init__.py  app.py
src/air_guitar/core/: audio_engine.py  chord_engine.py  effects.py  instrument_models.py  midi_output.py  recorder.py  sensor_handler.py
src/air_guitar/web/: __init__.py  controller.py
tests/: test_audio_engine.py
