[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-guitar"
version = "0.1.0"
description = "Gesture-controlled audio synthesis system powered by Arduino and Python."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["src"]
